--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
   "dependencies": {
     "electron": "^35.0.0",
     "puppeteer": "^24.4.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hectorl-m/ProyectoHector2oTrimestre.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hectorl-m/ProyectoHector2oTrimestre/issues"
+  },
+  "homepage": "https://github.com/hectorl-m/ProyectoHector2oTrimestre#readme"
 }
